--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -44,175 +44,165 @@
 
 
     <DataTemplate x:Key="NoneTemplate">
-        <DockPanel LastChildFill="True">
-            <Image Grid.Column="0" Source="..\Images\document-smiley-sad.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition  />
-                    <ColumnDefinition  />
-                </Grid.ColumnDefinitions>
-                <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                        Grid.Column="0" Grid.ColumnSpan="2"   Margin="5"/>
-            </Grid>
-        </DockPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition  Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Image Grid.Column="0" Source="..\Images\document-smiley-sad.png" Style="{StaticResource ImageStyle}" />
+
+            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                            Grid.Column="1" Margin="5"/>
+        </Grid>
+        
     </DataTemplate>
 
     <DataTemplate x:Key="EmailTemplate">
-        <DockPanel LastChildFill="True">
-            <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" DockPanel.Dock="Right"/>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
-                    <ColumnDefinition Style="{StaticResource CountStyleWidthColumn}"/>
-                    <ColumnDefinition Style="{StaticResource SubjectStyleWidthColumn}" />
-                    <ColumnDefinition Style="{StaticResource FromStyleWidthColumn}" />
-                </Grid.ColumnDefinitions>
-                <!--to-->
-                <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  FontStyleLabel="Italic"
-                                                Grid.Column="0" Margin="5 3 5 3"/>
-                <!--count of items-->
-                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" />
+
+            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"
                            Grid.Column="1"></TextBlock>
-                
-                <!--subject-->
-                <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                            Grid.Column="2"           Margin="5" Width="300"></ctrl:HightliteTextBlock>
-                <!--from -->
-                <ctrl:HightliteHyperlink Text="{Binding Path=From}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                Grid.Column="3"        Margin="5">
-                    <ctrl:HightliteHyperlink.Style>
-                        <Style TargetType="ctrl:HightliteTextBlockBase">
-                            <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Blue"/>
-                            <Style.Triggers>
-                                <Trigger Property="Control.IsMouseOver" Value="True">
-                                    <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Red" />
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </ctrl:HightliteHyperlink.Style>
-                </ctrl:HightliteHyperlink>
-            </Grid>
-        </DockPanel>
+<!--ctrl:HightliteTextBlock-->
+            <TextBlock Text="{Binding Path=Recepient}" 
+                                            Grid.Column="2"  Margin="5" ></TextBlock><!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"-->  
+
+            <TextBlock Text="{Binding Path=Name}"  
+                                            Grid.Column="2" Grid.ColumnSpan="2"  Margin="5"></TextBlock><!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"--> 
+            
+            <TextBlock Grid.Column="4"  Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" />
+        </Grid>
+        
     </DataTemplate>
 
     <DataTemplate x:Key="UserTemplate">
-        <DockPanel LastChildFill="True">
-            <DockPanel.ToolTip>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.ToolTip>
                 <ToolTip>
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="{Binding Path=Tag}" />
                     </StackPanel>
                 </ToolTip>
-            </DockPanel.ToolTip>
-            <Image Grid.Column="0" Source="..\Images\user.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-                <ctrl:HightliteHyperlink Text="{Binding Converter={StaticResource objectConverter}}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                        Grid.Column="0"   Margin="5">
-                    <ctrl:HightliteHyperlink.Style>
-                        <Style TargetType="ctrl:HightliteTextBlockBase">
-                            <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Blue"/>
-                            <Style.Triggers>
-                                <Trigger Property="Control.IsMouseOver" Value="True">
-                                    <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Red" />
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </ctrl:HightliteHyperlink.Style>
-                </ctrl:HightliteHyperlink>
-        </DockPanel>
+            </Grid.ToolTip>
+            <Image Grid.Column="0" Source="..\Images\user.png" Style="{StaticResource ImageStyle}" />
+            <ctrl:HightliteHyperlink Text="{Binding Converter={StaticResource objectConverter}}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                        Grid.Column="1"   Margin="5">
+                <ctrl:HightliteHyperlink.Style>
+                    <Style TargetType="ctrl:HightliteTextBlockBase">
+                        <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Blue"/>
+                        <Style.Triggers>
+                            <Trigger Property="Control.IsMouseOver" Value="True">
+                                <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Red" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ctrl:HightliteHyperlink.Style>
+            </ctrl:HightliteHyperlink>
+        </Grid>
     </DataTemplate>
 
     <DataTemplate x:Key="FileTemplate">
-        <DockPanel LastChildFill="True"><!--"..\Images\document.png"-->
-            <DockPanel.ToolTip>
-                <ToolTip>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Path}" />
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
-                    </StackPanel>
-                </ToolTip>
-            </DockPanel.ToolTip>
-            <Image  Source="{Binding Path=Name,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" DockPanel.Dock="Right"/>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
-                    <ColumnDefinition Style="{StaticResource CountStyleWidthColumn}"/>
-                </Grid.ColumnDefinitions>
-                <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                        Grid.Column="0"   Margin="5"/>
-                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.ToolTip>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding Path=Path}" />
+                    <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                </StackPanel>
+            </Grid.ToolTip>
+
+            <Image  Source="{Binding Path=Name,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" 
+                    Grid.Column="0"/>
+            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
                            Grid.Column="1"></TextBlock>
-            </Grid>
+            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                        Grid.Column="2" Grid.ColumnSpan="2"  Margin="5"/>
             
-        </DockPanel>
+            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" Grid.Column="4"/>
+
+        </Grid>
+        
     </DataTemplate>
 
     <DataTemplate x:Key="AttachmentTemplate">
-        <DockPanel>
-            <DockPanel.ToolTip>
-                <ToolTip>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Path}" />
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
-                    </StackPanel>
-                </ToolTip>
-            </DockPanel.ToolTip>
-            <Image Grid.Column="0" Source="{Binding Path=Name,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}" Margin="5" DockPanel.Dock="Right"/>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
-                    <ColumnDefinition Style="{StaticResource CountStyleWidthColumn}"/>
-                </Grid.ColumnDefinitions>
-                <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                        Grid.Column="0"   Margin="5"/>
-                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.ToolTip>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding Path=Path}" />
+                    <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                </StackPanel>
+            </Grid.ToolTip>
+
+            <Image  Source="{Binding Path=Name,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" 
+                    Grid.Column="0"/>
+            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
                            Grid.Column="1"></TextBlock>
-            </Grid>
-        </DockPanel>
+            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                        Grid.Column="2" Grid.ColumnSpan="2"  Margin="5"/>
+            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" Grid.Column="4"/>
+        </Grid>
     </DataTemplate>
 
+    
     <DataTemplate x:Key="CalendarTemplate">
-        <DockPanel>
-            <Image Grid.Column="0" Source="..\Images\date.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" DockPanel.Dock="Right"/>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
-                    <ColumnDefinition Style="{StaticResource CountStyleWidthColumn}"/>
-                </Grid.ColumnDefinitions>
-                <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                        Grid.Column="0"   Margin="5"/>
-                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
+       
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Column="0" Source="..\Images\date.png" Style="{StaticResource ImageStyle}" />
+            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
                            Grid.Column="1"></TextBlock>
-            </Grid>
-        </DockPanel>
+            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                        Grid.Column="2"   Margin="5"/>
+            <TextBlock Grid.Column="3"  Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" />
+        </Grid>
     </DataTemplate>
 
     <DataTemplate x:Key="PictureTemplate">
-        <DockPanel>
-            <DockPanel.ToolTip>
-                <ToolTip>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Path}" />
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
-                    </StackPanel>
-                </ToolTip>
-            </DockPanel.ToolTip>
-            <Image Grid.Column="0" Source="..\Images\pictures.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}" Margin="5" DockPanel.Dock="Right"/>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
-                    <ColumnDefinition Style="{StaticResource CountStyleWidthColumn}"/>
-                </Grid.ColumnDefinitions>
-                <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                        Grid.Column="0"   Margin="5"/>
-                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Column="0" Source="..\Images\pictures.png" Style="{StaticResource ImageStyle}" />
+            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
                            Grid.Column="1"></TextBlock>
-            </Grid>
-        </DockPanel>
+            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                        Grid.Column="2"   Margin="5"/>
+            <TextBlock Grid.Column="3"  Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" />
+        </Grid>
     </DataTemplate>
     
     <DataTemplate x:Key="CommandTemplate">
