updated: - added new form with empty ElementHost component;

--- a/WSUI.Module/View/EmailDataView.xaml
+++ b/WSUI.Module/View/EmailDataView.xaml
@@ -71,12 +71,12 @@
                         </Grid>
                     </DockPanel>-->
 
-                    <Grid>
+                    <Grid HorizontalAlignment="Stretch">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="35"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="0.25*"/>
+                            <ColumnDefinition Width="0.75*"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
