--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -13,6 +13,7 @@
       <ComponentRef Id="INSTALLFOLDER" />
       <ComponentRef Id="INSTALLFOLDERLIB" />
       <ComponentRef Id="INSTALLFOLDERLIB64" />
+      <ComponentRef Id="UPDATEFOLDER" />
       <ComponentGroupRef Id="ProductComponents" />
     </Feature>
     <UIRef Id="WixUI_InstallDir" />
@@ -34,6 +35,7 @@
         <Directory Id="INSTALLFOLDER" Name="WSUIOutlookPlugin">
           <Component Id="INSTALLFOLDER" Guid="c7b05686-b33f-4d75-ae82-aa8c069e6a7d">
             <RemoveFolder On="both" Id="INSTALLFOLDER" />
+            <RemoveFile Id="Files" On="uninstall" Name="*.*"></RemoveFile>
             <RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Type="string" Value="WSUIOutlookPlugin" />
           </Component>
           <Directory Id="INSTALLFOLDERLIB" Name="lib">
@@ -44,8 +46,15 @@
           </Directory>
           <Directory Id="INSTALLFOLDERLIB64" Name="lib64">
             <Component Id="INSTALLFOLDERLIB64" Guid="564C4477-7148-40C6-B90E-3C42DF281BD3">
-              <RemoveFolder On="both" Id="INSTALLFOLDERLIB64" />
+              <RemoveFolder On="uninstall" Id="INSTALLFOLDERLIB64" />
               <RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Type="string" Value="lib64" />
+            </Component>
+          </Directory>
+          <Directory Id="UPDATEFOLDER" Name="Update">
+            <Component Id="UPDATEFOLDER" Guid="FC40A1F1-8EE1-48F3-92DD-AC6C8BFDF64B">
+              <RemoveFolder On="uninstall" Id="UPDATEFOLDER" />
+              <RemoveFile Id="FilesUpdate" On="uninstall" Name="*.*"></RemoveFile>
+              <RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Type="string" Value="Update" />
             </Component>
           </Directory>
         </Directory>
