--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
-  <Product Id="CA1BCCE4-6865-493F-8979-3A5F96029094" Name="WSUIOutlookPlugin" Language="1033" Version="1.0.2" Manufacturer="FruitFactory" UpgradeCode="6169fa5d-89fa-44d3-9801-cefe8fc8755e" Codepage="1252">
+  <Product Id="4F026961-7160-41CE-A572-C9F732E9863C" Name="WSUIOutlookPlugin" Language="1033" Version="1.0.4" Manufacturer="FruitFactory" UpgradeCode="6169fa5d-89fa-44d3-9801-cefe8fc8755e" Codepage="1252">
     <Package InstallerVersion="200" Compressed="yes" Description="WSUIOutlookPlugin" Manufacturer="FruitFactory" Languages="1033" SummaryCodepage="1252" InstallScope="perUser" InstallPrivileges="limited" />
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <Media Id="1" Cabinet="WSUI.OutlookPlugin.cab" EmbedCab="yes" />
@@ -13,17 +13,19 @@
       <ComponentRef Id="INSTALLFOLDER" />
       <ComponentRef Id="INSTALLFOLDERLIB" />
       <ComponentRef Id="INSTALLFOLDERLIB64" />
-      <ComponentRef Id="UPDATEFOLDER" />
       <ComponentGroupRef Id="ProductComponents" />
     </Feature>
     <UIRef Id="WixUI_InstallDir" />
     <UIRef Id="WixUI_ErrorProgressText" />
     <Binary Id="adxregistrator_exe" SourceFile="$(var.ADX_PATH)\Redistributables\adxregistrator.exe" />
+    <Binary Id="managedAction" SourceFile="$(var.WSUI.OutlookPlugin.TargetDir)WSUI.CA.dll" />
     <CustomAction Id="RegisterDll" BinaryKey="adxregistrator_exe" Execute="deferred" ExeCommand="/install=&quot;[INSTALLFOLDER]$(var.WSUI.OutlookPlugin.TargetFileName)&quot; /privileges=user /returnExitCode=false" Impersonate="yes" />
     <CustomAction Id="UnregisterDll" BinaryKey="adxregistrator_exe" Execute="deferred" ExeCommand="/uninstall=&quot;[INSTALLFOLDER]$(var.WSUI.OutlookPlugin.TargetFileName)&quot; /privileges=user" Impersonate="yes" Return="ignore" />
+    <CustomAction Id="DeleteFiles" BinaryKey="managedAction" DllEntry="ClearFiles" Execute="immediate" Return="check" />
     <InstallExecuteSequence>
       <Custom Action="RegisterDll" After="SelfRegModules">NOT Installed</Custom>
       <Custom Action="UnregisterDll" After="SelfUnregModules">Installed</Custom>
+      <Custom Action="DeleteFiles" After="InstallFinalize">REMOVE="ALL"</Custom>
     </InstallExecuteSequence>
     <!-- Properties for all current versions of the .NET Framework are available here: http://wix.sourceforge.net/manual-wix3/wixnetfxextension.htm -->
     <PropertyRef Id="NETFRAMEWORK40CLIENT" />
@@ -35,7 +37,6 @@
         <Directory Id="INSTALLFOLDER" Name="WSUIOutlookPlugin">
           <Component Id="INSTALLFOLDER" Guid="c7b05686-b33f-4d75-ae82-aa8c069e6a7d">
             <RemoveFolder On="both" Id="INSTALLFOLDER" />
-            <RemoveFile Id="Files" On="uninstall" Name="*.*"></RemoveFile>
             <RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Type="string" Value="WSUIOutlookPlugin" />
           </Component>
           <Directory Id="INSTALLFOLDERLIB" Name="lib">
@@ -48,13 +49,6 @@
             <Component Id="INSTALLFOLDERLIB64" Guid="564C4477-7148-40C6-B90E-3C42DF281BD3">
               <RemoveFolder On="uninstall" Id="INSTALLFOLDERLIB64" />
               <RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Type="string" Value="lib64" />
-            </Component>
-          </Directory>
-          <Directory Id="UPDATEFOLDER" Name="Update">
-            <Component Id="UPDATEFOLDER" Guid="FC40A1F1-8EE1-48F3-92DD-AC6C8BFDF64B">
-              <RemoveFolder On="uninstall" Id="UPDATEFOLDER" />
-              <RemoveFile Id="FilesUpdate" On="uninstall" Name="*.*"></RemoveFile>
-              <RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Type="string" Value="Update" />
             </Component>
           </Directory>
         </Directory>
